# initial-repo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  flow.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
initial-repo/: __init__.py  main.py
src/pipelines/: utilities.py
