[tool.poetry]
name = "NAME_HERE"
version = "0.1.0"
description = "DESRC_HERE"
authors = ["jay naik <jay@bdlabs.ai>"]

[tool.poetry.dependencies]
python = "3.8.5"
boto3 = "1.17.57"
numpy = "1.20.2"
pandas = "1.2.3"
pathlib = "1.0.1"
python-dotenv = "0.17.0"
requests = "2.25.1"
urllib3 = "1.26.4"
SQLAlchemy = "==1.4.9"

[tool.poetry.dev-dependencies]
ipykernel = "5.5.3"
ipython = "7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
